Bug 360214 - Detailed memory information doesn't look good with Breeze Dark theme
Summary: Detailed memory information doesn't look good with Breeze Dark theme
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: ksysguard (other bugs)
Version First Reported In: 5.5.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KSysGuard Developers
URL: http://i.imgur.com/Mnrw5LN.png
Keywords:
: 343436 354799 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-07 16:30 UTC by Semyon Ivanov
Modified: 2017-06-27 20:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Semyon Ivanov 2016-03-07 16:30:21 UTC
Black text on dark grey background makes it barely readable.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-03-08 20:19:35 UTC
QWebView doesn't automatically pick up the system's color schemes and I have no idea how to fix it and I'm not going to invest a lot of time into this feature...
Comment 2 Kai Uwe Broulik 2017-06-27 08:41:53 UTC
*** Bug 354799 has been marked as a duplicate of this bug. ***
Comment 3 Kai Uwe Broulik 2017-06-27 09:39:36 UTC
Git commit 3c2eff3dcb6e35bb280fc02a2c4f3421884f80b4 by Kai Uwe Broulik.
Committed on 27/06/2017 at 09:38.
Pushed by broulik into branch 'master'.

Inject custom style sheet with system colors

WebView follows the color of the application but text does not leading to
black text on dark gray background.

Differential Revision: https://phabricator.kde.org/D6402

M  +16   -0    processui/scripting.cpp

https://commits.kde.org/libksysguard/3c2eff3dcb6e35bb280fc02a2c4f3421884f80b4
Comment 4 Christoph Feck 2017-06-27 20:31:18 UTC
*** Bug 343436 has been marked as a duplicate of this bug. ***