Inject custom style sheet with system colors

WebView follows the color of the application but text does not leading to
black text on dark gray background.

BUG: 360214

Differential Revision: https://phabricator.kde.org/D6402